force-app/main/default/objects/HR_Object__c/HR_Object__c.object-meta.xml
<CustomObject>
    <description>This object is key in getting the HR info</description>
    <label>HR Object</label>
    <nameField>
        <label>HR Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HR Objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>