force-app/main/default/objects/HR_Object__c/fields/Applicant_Id__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Id__c</fullName>
    <displayFormat>{YYYY}{MM}-{0}</displayFormat>
    <label>Applicant Id</label>
    <type>AutoNumber</type>
</CustomField>