force-app/main/default/objects/HR_Object__c/fields/Base_Salary__c.field-meta.xml
<CustomField>
    <fullName>Base_Salary__c</fullName>
    <defaultValue>1000</defaultValue>
    <label>Base Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>