force-app/main/default/objects/HR_Object__c/fields/Emp_Employer__c.field-meta.xml
<CustomField>
    <fullName>Emp_Employer__c</fullName>
    <label>Emp Employer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>HR Objects</relationshipLabel>
    <relationshipName>HR_Objects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>