force-app/main/default/objects/HR_Object__c/fields/Employee_401_Match_Percent__c.field-meta.xml
<CustomField>
    <fullName>Employee_401_Match_Percent__c</fullName>
    <label>Employee 401 Match Percent</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>