force-app/main/default/objects/HR_Object__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>