force-app/main/default/objects/HR_Object__c/fields/Employee_Department__c.field-meta.xml
<CustomField>
    <fullName>Employee_Department__c</fullName>
    <label>Employee Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>