force-app/main/default/objects/HR_Object__c/fields/Employee_Description__c.field-meta.xml
<CustomField>
    <fullName>Employee_Description__c</fullName>
    <label>Employee Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>