force-app/main/default/objects/HR_Object__c/fields/Employee_phone__c.field-meta.xml
<CustomField>
    <fullName>Employee_phone__c</fullName>
    <label>Employee phone</label>
    <type>Phone</type>
</CustomField>