force-app/main/default/objects/HR_Object__c/fields/Employee_Physical_locaiton__c.field-meta.xml
<CustomField>
    <fullName>Employee_Physical_locaiton__c</fullName>
    <label>Employee Physical locaiton</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>