force-app/main/default/objects/HR_Object__c/fields/Employee_roll_Number__c.field-meta.xml
<CustomField>
    <fullName>Employee_roll_Number__c</fullName>
    <label>Employee roll Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>