force-app/main/default/objects/HR_Object__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <formula>DATE(YEAR( Start_Date__c ) +1, MONTH(Start_Date__c), 1) - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Date</type>
</CustomField>