force-app/main/default/objects/HR_Object__c/fields/IsEmployee__c.field-meta.xml
<CustomField>
    <fullName>IsEmployee__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox says whether the personal is an employee to the company are not</inlineHelpText>
    <label>IsEmployee</label>
    <type>Checkbox</type>
</CustomField>