force-app/main/default/objects/HR_Object__c/fields/Rec_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Rec_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rec Assigned</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HR Objects</relationshipLabel>
    <relationshipName>HR_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>