force-app/main/default/objects/HR_Object__c/fields/X401K_Amount__c.field-meta.xml
<CustomField>
    <fullName>X401K_Amount__c</fullName>
    <formula>Base_Salary__c  *  Employee_401_Match_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>401K Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>