force-app/main/default/objects/HR_Object__c/recordTypes/Operations.recordType-meta.xml
<RecordType>
    <fullName>Operations</fullName>
    <active>true</active>
    <label>Operations</label>
</RecordType>