force-app/main/default/objects/HR_Object__c/validationRules/Employee_needs_a_roll_number.validationRule-meta.xml
<ValidationRule>
    <fullName>Employee_needs_a_roll_number</fullName>
    <active>false</active>
    <errorConditionFormula>IF(IsEmployee__c,IF(ISBLANK(Employee_roll_Number__c),TRUE, FALSE ) ,FALSE)</errorConditionFormula>
    <errorDisplayField>Employee_roll_Number__c</errorDisplayField>
    <errorMessage>Please fill the employee roll number</errorMessage>
</ValidationRule>