force-app/main/default/objects/HR_Object__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Base_Salary__c</columns>
    <columns>Employee_401_Match_Percent__c</columns>
    <columns>Employee__c</columns>
    <columns>Employee_Department__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>